[491080] Created a wizard that can create VIATRA transformations
The wizard is capable of creating the following
 - Batch transformation
 - Batch transformation with logger support
 - Batch transformation with debugger support 
 - Event-driven transformation
 - Event-driven transformation with logger support
 - Event-driven transformation with debugger support

Change-Id: Ib39eb93798838a07b7331fcd1a9fdce94f4cbdba

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -37,6 +37,7 @@
 		<module>../../query/features/org.eclipse.viatra.query.sdk.feature</module>
 
 		<!-- Transformations -->
+		<module>../../transformation/plugins/org.eclipse.viatra.transformation.ui</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.evm.transactions</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.debug</module>
@@ -44,6 +45,7 @@
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.tracer</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.evm.transactions.feature</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.debug.feature</module>
+		
 
 		<!-- CEP -->
 		<module>../../cep/plugins/org.eclipse.viatra.cep.core</module>
