--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -23,6 +23,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 		<viatra.main.version>1.2.0-SNAPSHOT</viatra.main.version>
 		<viatra.incubation.version>0.12.0-SNAPSHOT</viatra.incubation.version>
+		<cbi.jarsigner.version>1.1.3</cbi.jarsigner.version>
 		<!-- Composite site related properties -->
 		<viatra.updates.dir>updates</viatra.updates.dir>
 		<viatra.download.area>target/composite</viatra.download.area>
@@ -157,4 +158,62 @@
 		<url>${eclipse.bugzillaUrl}</url>
 		<system>Bugzilla</system>
 	</issueManagement>
+	<profiles>
+	   <profile>
+            <id>sign_milestone</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>BUILD_TYPE</name>
+                    <value>milestone</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.cbi.maven.plugins</groupId>
+                        <artifactId>eclipse-jarsigner-plugin</artifactId>
+                        <version>${cbi.jarsigner.version}</version>
+                        <executions>
+                            <execution>
+                                <id>sign</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>verify</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>sign_release</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>BUILD_TYPE</name>
+                    <value>release</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.cbi.maven.plugins</groupId>
+                        <artifactId>eclipse-jarsigner-plugin</artifactId>
+                        <version>${cbi.jarsigner.version}</version>
+                        <executions>
+                            <execution>
+                                <id>sign</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>verify</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
