--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>org.eclipse.viatra.parent.core</artifactId>
-	<name>VIATRA</name>
+	<name>VIATRA Core Plug-ins</name>
 	<url>http://eclipse.org/viatra</url>
 	<packaging>pom</packaging>
 	<modules>
