--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eclipse.viatra</groupId>
 	<artifactId>org.eclipse.viatra.parent</artifactId>
-	<name>VIATRA</name>
+	<name>VIATRA Parent job</name>
 	<url>http://eclipse.org/viatra</url>
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
