--- a/cep/tests/org.eclipse.viatra.cep.core.tests.compiler/pom.xml
+++ b/cep/tests/org.eclipse.viatra.cep.core.tests.compiler/pom.xml
@@ -51,6 +51,10 @@
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
 		</plugins>
 	</build>
 	<version>0.12.0-SNAPSHOT</version>
