--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
@@ -50,6 +50,10 @@
 					<argLine>${vmargs}</argLine>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
 		</plugins>
 	</build>
 	<profiles>
