--- a/query/tests/org.eclipse.viatra.query.runtime.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.tests/pom.xml
@@ -11,4 +11,12 @@
     </parent>
 	<artifactId>org.eclipse.viatra.query.runtime.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
+	<build>
+	   <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+	   </plugins>
+	</build>
 </project>
