--- a/releng/org.eclipse.viatra.parent.analysis/pom.xml
+++ b/releng/org.eclipse.viatra.parent.analysis/pom.xml
@@ -13,6 +13,12 @@
 		<version>1.2.0-SNAPSHOT</version>
 		<relativePath>../org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
+	<properties>
+	    <!-- Sonar -->
+        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${jacoco.targetdir}/jacoco.exec</sonar.jacoco.reportPath>
+	</properties>
 	<modules>
         <module>../../releng/org.eclipse.viatra.parent.core</module>
         <module>../../releng/org.eclipse.viatra.parent.all</module>
