--- a/examples/bpm/org.eclipse.viatra.examples.bpm.parent/pom.xml
+++ b/examples/bpm/org.eclipse.viatra.examples.bpm.parent/pom.xml
@@ -10,7 +10,7 @@
 		<artifactId>org.eclipse.viatra.parent</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
 		<groupId>org.eclipse.viatra</groupId>
-		<relativePath>../../../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
+		<relativePath>../../../releng/org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
 	<packaging>pom</packaging>
 	<properties>
