--- a/addon/features/org.eclipse.viatra.addon.viewers.tooling.feature/pom.xml
+++ b/addon/features/org.eclipse.viatra.addon.viewers.tooling.feature/pom.xml
@@ -9,7 +9,7 @@
         <version>1.2.0-SNAPSHOT</version>
         <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
     </parent>
-	<artifactId>org.eclipse.viatra.addon.viewers.tooling.zest.feature</artifactId>
+	<artifactId>org.eclipse.viatra.addon.viewers.tooling.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 	<build>
 		<plugins>
