[491839] refactored Rete visualization view
	rewrote the logic for preparing the recipe EMF model for 
	selected matchers
	added preference page for switching to traverse
	subpattern call mode
	corrected copyright in changed files

Change-Id: I3a9b32ebba12992792b1cce9157891a7ebb97178
Signed-off-by: Abel Hegedus <abel.hegedus@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.ui.retevis/plugin.xml
@@ -5,4 +5,16 @@
   <extension id="org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization" id="org.eclipse.viatra.query.tooling.ui.retevis.ReteVisualization"/>
   </extension>
+  <extension
+        point="org.eclipse.ui.preferencePages">
+     <page
+           category="org.eclipse.viatra.query.tooling.ui.viatra"
+           class="org.eclipse.viatra.query.tooling.ui.retevis.preference.ReteVisualizationPreferencePage"
+           id="org.eclipse.viatra.query.tooling.ui.retevis"
+           name="Rete Visualization">
+        <keywordReference
+              id="org.eclipse.viatra.query.patternlanguage.emf.ui.keyword_EMFPatternLanguage">
+        </keywordReference>
+     </page>
+  </extension>
 </plugin>
