--- a/addon/plugins/org.eclipse.viatra.addon.validation.runtime/plugin.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.validation.runtime/plugin.xml
@@ -10,16 +10,8 @@
             description="This annotation is used to mark a pattern for use in the VIATRA Query validation framework."
             name="Constraint">
          <annotationparameter
-               deprecated="true"
-               description="Please use &quot;key&quot; parameter with a list containing a single string value with the name of the parameter instead!"
-               mandatory="false"
-               multiple="false"
-               name="location"
-               type="variablereference">
-         </annotationparameter>
-         <annotationparameter
-               description="The key of constraint represents the pattern parameter objects the constraint violation needs to be attached to. Keys are defined as a list of parameter names as strings (e.g. key = {&quot;param1&quot;, &quot;param2&quot;}"
-               mandatory="false"
+               description="The keys of a constraint represents the pattern parameter objects the constraint violation needs to be attached to. Keys are defined as a list of parameter names (e.g. keys = {param1, param2}"
+               mandatory="true"
                multiple="false"
                name="key"
                type="list">
@@ -46,7 +38,7 @@
                type="string">
          </annotationparameter>
          <annotationparameter
-               description="Provide parameter a list, where permutations of the same values register as one match violation. Symmetries are defined as a list of parameter names as strings (e.g. symmetric = {&quot;param1&quot;, &quot;param2&quot;}"
+               description="Provide parameter a list, where permutations of the same values register as one match violation. Symmetries are defined as a list of parameter names (e.g. symmetric = {param1, param2}"
                mandatory="false"
                multiple="true"
                name="symmetric"
