[492158] Transformation debugging is initiated via using a view
- Adaptable EVMS are displayed on the TransformationBrowser view
- Double click on the adaptable EVM initiates the debugger
- After initialization the rules and their corresponding activations are
displayed under the adaptable EVM instance.
- Also cleaned up the previous errors based on code review comments

Change-Id: I43d9c47fab0b9343de2237eba017f334ffbeb944

--- a/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
+++ b/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
@@ -5,15 +5,15 @@
          point="org.eclipse.ui.views">
       <view
             category="org.eclipse.viatra.query.tooling.ui"
-            class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.views.ActivationBrowser"
+            class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.views.AdaptableTransformationBrowser"
             icon="icons/rsz_viatra_logo.png"
             id="org.eclipse.viatra.transformation.ui.debug.DisplayActivations"
-            name="Activation Browser"
+            name="Adaptable Transformation Browser"
             restorable="true">
       </view>
       <view
             category="org.eclipse.viatra.query.tooling.ui"
-            class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.views.TransformationViewer"
+            class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.views.ModelInstanceViewer"
             icon="icons/rsz_viatra_logo.png"
             id="org.eclipse.viatra.transformation.ui.debug.TransformationViewer"
             name="Transformation Viewer"
