--- a/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
+++ b/transformation/plugins/org.eclipse.viatra.transformation.debug.ui/plugin.xml
@@ -31,12 +31,21 @@
             id="org.eclipse.viatra.transformation.ui.debug.addbreakpoint"
             name="Add Breakpoint">
       </command>
+      <command
+            categoryId="org.eclipse.viatra.transformation.ui.debug"
+            id="org.eclipse.viatra.transformation.debug.ui.SelectNextActivation"
+            name="SelectNextActivation">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
             class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.handlers.AddBreakpointHandler"
             commandId="org.eclipse.viatra.transformation.ui.debug.addbreakpoint">
+      </handler>
+      <handler
+            class="org.eclipse.viatra.transformation.debug.ui.util.DebugExecutableExtensionFactory:org.eclipse.viatra.transformation.debug.ui.handlers.SelectNextActivationHandler"
+            commandId="org.eclipse.viatra.transformation.debug.ui.SelectNextActivation">
       </handler>
    </extension>
    <extension
@@ -48,7 +57,17 @@
                class="org.eclipse.viatra.transformation.debug.ui.views.transformationbrowser.TransformationBrowserConfigurationControl">
          </control>
          <separator
-               name="org.eclipse.viatra.transformation.ui.separator1">
+               name="org.eclipse.viatra.transformation.debug.ui.separator1">
+         </separator>
+         <command
+               commandId="org.eclipse.viatra.transformation.debug.ui.SelectNextActivation"
+               icon="icons/activation_stopped.gif"
+               id="org.eclipse.viatra.transformation.ui.debug.nextActMenu"
+               label="Select as Next Activation"
+               style="push">
+         </command>
+         <separator
+               name="org.eclipse.viatra.transformation.debug.ui.separator2">
          </separator>
          <command
                commandId="org.eclipse.viatra.transformation.ui.debug.addbreakpoint"
@@ -58,7 +77,7 @@
                style="push">
          </command>
          <separator
-               name="org.eclipse.viatra.transformation.ui.separator2">
+               name="org.eclipse.viatra.transformation.debug.ui.separator3">
          </separator>
       </menuContribution>
    </extension>
