[437972] Defined a new, rule-based type inferrer
Change-Id: Ia151c807b5b9eef9e7002e79089073a3eeefa707
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>
Signed-off-by: Grill Balazs <balazs.grill@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/build.properties
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/build.properties
@@ -1,5 +1,6 @@
 source.. = src/,\
-           xtend-gen/
+           xtend-gen/,\
+           emf-gen/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
