--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
@@ -13,6 +13,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
 		<vmargs>-Xmx1024m -XX:MaxPermSize=512m</vmargs>
+		<emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
 	</properties>
 	<build>
 		<plugins>
@@ -22,6 +23,12 @@
 				<configuration>
 					<filesets>
 						<fileset>
+							<directory>emf-gen</directory>
+							<excludes>
+								<exclude>.gitignore</exclude>
+							</excludes>
+						</fileset>
+						<fileset>
 							<directory>xtend-gen</directory>
 							<excludes>
 								<exclude>.gitignore</exclude>
@@ -30,6 +37,35 @@
 					</filesets>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.eclipse.tycho.extras</groupId>
+                <artifactId>tycho-eclipserun-plugin</artifactId>
+                <version>${tycho.version}</version>
+                <configuration>
+                    <appArgLine>-data ${emf.workspace.location} -application org.eclipse.emf.codegen.ecore.Generator -projects ${project.basedir} -model ${project.basedir}/model/typetest.genmodel ${project.basedir}</appArgLine>
+                    <dependencies>
+                        <dependency>
+                            <artifactId>org.eclipse.emf.codegen.ecore</artifactId>
+                            <type>eclipse-plugin</type>
+                        </dependency>
+                    </dependencies>
+                    <repositories>
+                        <repository>
+                            <id>indigo</id>
+                            <layout>p2</layout>
+                            <url>http://download.eclipse.org/releases/mars</url>
+                        </repository>
+                    </repositories>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>eclipse-run</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
