[492683] Setting up Maven toolchains
Maven toolchains are required in order to have some projects that have
different version requirements (e.g. have a mix of Java 7 and Java 8
projects available) or running Maven with Java 8 while still targeting
Java 7.

Change-Id: I1ff855462870475059799e9af42449c34e6711d0
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage/pom.xml
@@ -13,6 +13,9 @@
 	<packaging>eclipse-plugin</packaging>
 	<build>
 		<plugins>
+		    <plugin>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
