--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -92,6 +92,9 @@
 	</repositories>
 	<build>
 		<plugins>
+		    <plugin>
+		      <artifactId>maven-toolchains-plugin</artifactId>
+		    </plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
